unpackaged/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <label>Insurance Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>