unpackaged/main/default/objects/Insurance__c/fields/Document_On_File__c.field-meta.xml
<CustomField>
    <fullName>Document_On_File__c</fullName>
    <label>Document On File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>