unpackaged/main/default/objects/Insurance__c/fields/Document_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Received_Date__c</fullName>
    <label>Document Received Date</label>
    <type>Date</type>
</CustomField>