unpackaged/main/default/objects/Insurance__c/fields/Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Name__c</fullName>
    <label>Insurance Name</label>
    <type>TextArea</type>
</CustomField>