unpackaged/main/default/objects/Insurance__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <label>Insurance Number</label>
    <type>TextArea</type>
</CustomField>