unpackaged/main/default/objects/Insurance__c/fields/Loss_Run_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Loss_Run_Period_End__c</fullName>
    <label>Loss Run Period End</label>
    <type>Date</type>
</CustomField>