unpackaged/main/default/objects/Insurance__c/fields/Loss_Run_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Loss_Run_Period_Start__c</fullName>
    <label>Loss Run Period Start</label>
    <type>Date</type>
</CustomField>