unpackaged/main/default/objects/Insurance__c/fields/Meets_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Meets_Minimum__c</fullName>
    <label>Meets Minimum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - 1,000,000 or greater</fullName>
            </value>
            <value>
                <fullName>No - Below Minimum Limits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>